# api/swagger/swagger.yaml
@@ -110,6 +110,11 @@ paths:
           type: string
           in: query
           required: false
+        - name: Authorization
+          description: Authorization token
+          type: string
+          in: header
+          required: false
       responses:
         # responses may fall through to errors
         "302":
