# oauth/token-endpoint.js
@@ -1,4 +1,5 @@
 const TokenService = require('./token-service').TokenService;
+const Logger = require('../tools/logger').Logger;
 
 /**
  * Token endpoint management class
@@ -16,12 +17,25 @@ class TokenEndpoint {
      */
     password(grant, callback) {
         return TokenService.getBearerToken(grant.username, grant.password)
-            .then((token) => { 
+            .then((token) => {
                 callback(null, token);
             })
             .catch((error) => {
                 callback(error, null);
             });
+    }
+
+    /**
+     * Handles authorization code grant type
+     * 
+     * @param {any} grant grant parameters
+     * @param {any} callback execution callback
+     * @returns {undefined}
+     * 
+     * @memberOf TokenEndpoint
+     */
+    authorizationCode(grant, callback) {
+
     }
 }
 exports.TokenEndpoint = TokenEndpoint;
